<resources>
    <string name="app_name">Playlist Maker</string>
    <string name="main_header">Playlist maker</string>
    <string name="search">Поиск</string>
    <string name="media">Медиатека</string>
    <string name="settings">Настройки</string>
    <string name="settings_header">Настройки</string>
    <string name="dark_theme">Темная тема</string>
    <string name="share_app">Поделиться приложением</string>
    <string name="write_to_support">Написать в поддержку</string>
    <string name="agreement">Пользовательское соглашение</string>
    <string name="share_app_text">Посмотрите курс по Андроид-разработке в Практикуме: https://practicum.yandex.ru/android-developer/</string>
    <string name="support_email">nastyavorontso@yandex.ru</string>
    <string name="support_subject">Сообщение разработчикам и разработчицам приложения Playlist Maker</string>
    <string name="support_body">Спасибо разработчикам и разработчицам за крутое приложение!</string>
    <string name="user_agreement_url">https://yandex.ru/legal/practicum_offer/</string>
    <string name="search_header">Поиск</string>
    <string name="input_hint">Поиск</string>
    <string name="empty_message">Ничего не нашлось</string>
    <string name="error_state_message">Проблемы со связью\n\n Загрузка не удалась. Проверьте подключение к интернету</string>
    <string name="renew_message">Обновить</string>
    <string name="search_history">Вы искали</string>
    <string name="clear_history">Очистить историю</string>
    <string name="duration">Длительность</string>
    <string name="album">Альбом</string>
    <string name="year">Год</string>
    <string name="direction">Жанр</string>
    <string name="country_name">Страна</string>
    <string name="unknown_album">Неизвестный альбом</string>
    <string name="empty_favorites">Ваша медиатека пуста</string>
    <string name="empty_playlist">Вы не создали \nни одного плейлиста</string>
    <string name="new_playlist_button">Новый плейлист</string>
    <string name="favorite_tracks">Избранные треки</string>
    <string name="playlists">Плейлисты</string>
    <string name="progress">00:00</string>
    <string name="new_playlist">Новый плейлист</string>
    <string name="playlist_name">Название*</string>
    <string name="description">Описание</string>
    <string name="create">Создать</string>
    <string name="add_to_playlist">Добавить в плейлист</string>
    <string name="minutes">минут</string>
    <string name="playlist_empty_tracks">В плейлисте пока нет треков</string>
    <string name="delete_track_title">Удалить трек</string>
    <string name="delete_track_message">Вы уверены, что хотите удалить трек из плейлиста?</string>
    <string name="cancel">Отмена</string>
    <string name="delete">Удалить</string>
    <string name="share">Поделиться</string>
    <string name="edit_info">Редактировать информацию</string>
    <string name="delete_playlist">Удалить плейлист</string>
    <string name="empty_playlist_share_message">В этом плейлисте нет списка треков, которым можно поделиться</string>
    <string name="delete_playlist_title">Удалить плейлист</string>
    <string name="delete_playlist_message">Хотите удалить плейлист?</string>
    <string name="yes">Да</string>
    <string name="no">Нет</string>
    <string name="edit_playlist">Редактировать</string>
    <string name="save">Сохранить</string>
    <string name="error_updating_playlist">Ошибка при сохранении плейлиста</string>


    <plurals name="tracks_count">
        <item quantity="one">%d трек</item>
        <item quantity="few">%d трека</item>
        <item quantity="many">%d треков</item>
        <item quantity="other">%d треков</item>
    </plurals>

</resources>