<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.main.MainActivity">

    <LinearLayout
        style="@style/MainLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:orientation="horizontal"
            android:padding="@dimen/header_padding">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_gravity="start"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/main_header"
                android:textColor="@color/white"
                android:textSize="@dimen/header_size" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:orientation="vertical">

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero_height_size"
                android:layout_marginBottom="@dimen/margin_bottom_size"
                android:layout_weight="1"
                android:id="@+id/search_main"
                style="@style/ButtonMainStyle"
                android:text="@string/search"
                app:icon="@drawable/ic_search" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero_height_size"
                android:layout_marginBottom="@dimen/margin_bottom_size"
                android:layout_weight="1"
                android:id="@+id/media_main"
                style="@style/ButtonMainStyle"
                android:text="@string/media"
                app:icon="@drawable/ic_mediateka" />

            <Button
                android:layout_width="match_parent"
                android:layout_height="@dimen/zero_height_size"
                android:layout_marginBottom="@dimen/margin_bottom_size"
                android:layout_weight="1"
                android:id="@+id/settings_main"
                style="@style/ButtonMainStyle"
                android:text="@string/settings"
                app:icon="@drawable/ic_settings" />
        </LinearLayout>
    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>