<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        style="@style/SecondaryLayoutStyle"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="0dp"
        tools:layout_editor_absoluteY="0dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:orientation="horizontal"
            android:padding="@dimen/header_padding">

            <ImageView
                android:id="@+id/settings_arrow_back"
                android:layout_width="@dimen/arrow_sizes"
                android:layout_height="@dimen/arrow_sizes"
                android:background="?attr/selectableItemBackground"
                android:padding="@dimen/padding_start_size"
                android:src="@drawable/ic_arrow_back"
                android:tint="?attr/colorPrimaryVariant"
                tools:ignore="UseAppTint" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ys_display_medium"
                android:paddingHorizontal="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:text="@string/settings_header"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/header_size" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_layout_size"
            android:layout_marginTop="@dimen/layout_margin_top"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewSettingsStyle"
                android:text="@string/dark_theme" />

            <Switch
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:layout_gravity="center"
                android:layout_marginEnd="@dimen/margin_end_from_icon"
                android:layout_weight="1"
                tools:ignore="UseSwitchCompatOrMaterialXml" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/share_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_layout_size"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewSettingsStyle"
                android:text="@string/share_app" />

            <ImageView
                style="@style/SettingsButtonStyle"
                android:src="@drawable/ic_share" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/support_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_layout_size"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewSettingsStyle"
                android:text="@string/write_to_support" />

            <ImageView
                style="@style/SettingsButtonStyle"
                android:src="@drawable/ic_support" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/privacy_agreement_button"
            android:layout_width="match_parent"
            android:layout_height="@dimen/settings_layout_size"
            android:background="?attr/selectableItemBackground"
            android:orientation="horizontal">

            <TextView
                style="@style/TextViewSettingsStyle"
                android:text="@string/agreement" />

            <ImageView
                style="@style/SettingsButtonStyle"
                android:src="@drawable/ic_arrow_forward" />
        </LinearLayout>

    </LinearLayout>

</androidx.constraintlayout.widget.ConstraintLayout>