<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".search.ui.SearchFragment">

    <LinearLayout
        style="@style/SecondaryLayoutStyle"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:ignore="MissingConstraints"
        tools:layout_editor_absoluteX="91dp"
        tools:layout_editor_absoluteY="92dp">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="@dimen/header_height"
            android:orientation="horizontal"
            android:padding="@dimen/header_padding"
            tools:ignore="MissingConstraints">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:fontFamily="@font/ys_display_medium"
                android:paddingHorizontal="16dp"
                android:paddingTop="8dp"
                android:paddingBottom="16dp"
                android:text="@string/search_header"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="@dimen/header_size" />
        </LinearLayout>

        <FrameLayout
            android:id="@+id/container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="16dp"
            android:background="@drawable/rounded_corners"
            android:gravity="center"
            android:orientation="horizontal"
            android:padding="@dimen/icon_padding_size">

            <EditText
                android:id="@+id/inputEditText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@drawable/rounded_corners"
                android:drawableStart="@drawable/ic_search"
                android:drawablePadding="8dp"
                android:fontFamily="@font/ys_display_regular"
                android:hint="@string/input_hint"
                android:imeOptions="actionDone"
                android:inputType="text"
                android:maxLines="1"
                android:paddingStart="8dp"
                android:singleLine="true"
                android:textColor="@color/black"
                android:textColorHint="?attr/searchIcon" />

            <ImageView
                android:id="@+id/clearIcon"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentEnd="true"
                android:layout_gravity="end|center_vertical"
                android:layout_marginStart="8dp"
                android:layout_marginEnd="8dp"
                android:src="@drawable/ic_clear"
                android:tint="?attr/searchIcon"
                android:visibility="gone"
                tools:ignore="ObsoleteLayoutParam,UseAppTint" />

        </FrameLayout>

        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="248dp"
            android:id="@+id/progressBar"
            android:visibility="gone">

            <ProgressBar
                android:layout_width="44dp"
                android:layout_height="44dp"
                android:layout_gravity="center"
                android:indeterminateTint="@color/light_blue" />

        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/trackRecyclerView"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

        <FrameLayout
            android:id="@+id/emptyStateLayout"
            android:layout_width="match_parent"
            android:layout_height="155dp"
            android:layout_marginTop="102dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/placeholder_size"
                android:layout_height="@dimen/placeholder_size"
                android:layout_gravity="top|center_horizontal"
                android:src="@drawable/nothing_to_find" />

            <TextView
                android:id="@+id/emptyMessage"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="bottom|center_horizontal"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/empty_message"
                android:textColor="?attr/colorPrimaryVariant"
                android:textSize="@dimen/text_placeholder" />
        </FrameLayout>

        <FrameLayout
            android:id="@+id/errorStateLayout"
            android:layout_width="match_parent"
            android:layout_height="270dp"
            android:layout_marginTop="102dp"
            android:orientation="vertical"
            android:visibility="gone">

            <ImageView
                android:layout_width="@dimen/placeholder_size"
                android:layout_height="@dimen/placeholder_size"
                android:layout_gravity="top|center_horizontal"
                android:src="@drawable/lost_internet_connection" />

            <FrameLayout
                android:id="@+id/messageStateLayout"
                android:layout_width="wrap_content"
                android:layout_height="90dp"
                android:layout_marginTop="125dp"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/errorMessage"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_horizontal|top"
                    android:layout_marginHorizontal="24dp"
                    android:fontFamily="@font/ys_display_medium"
                    android:text="@string/error_state_message"
                    android:textAlignment="center"
                    android:textColor="?attr/colorPrimaryVariant"
                    android:textSize="@dimen/text_placeholder" />

            </FrameLayout>

            <Button
                android:id="@+id/retryButton"
                android:layout_width="90dp"
                android:layout_height="40dp"
                android:layout_gravity="center|bottom"
                android:backgroundTint="?attr/colorOnSecondary"
                android:fontFamily="@font/ys_display_medium"
                android:padding="0dp"
                android:text="@string/renew_message"
                android:textAlignment="center"
                android:textAllCaps="false"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/renew_button"
                app:cornerRadius="@dimen/renew_button_radius" />

        </FrameLayout>

        <LinearLayout
            android:id="@+id/historyContainer"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:visibility="gone">

            <TextView
                android:id="@+id/historyTitle"
                android:layout_width="wrap_content"
                android:layout_height="52dp"
                android:layout_gravity="center"
                android:layout_marginTop="24dp"
                android:fontFamily="@font/ys_display_medium"
                android:gravity="center"
                android:text="@string/search_history"
                android:textColor="?attr/colorOnSecondary"
                android:textSize="19sp" />

            <androidx.recyclerview.widget.RecyclerView
                android:id="@+id/historyRecyclerView"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_weight="1" />

            <Button
                android:id="@+id/clearHistoryButton"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:backgroundTint="?attr/colorOnSecondary"
                android:fontFamily="@font/ys_display_medium"
                android:text="@string/clear_history"
                android:textAllCaps="false"
                android:textColor="?attr/colorSecondary"
                android:textSize="@dimen/renew_button"
                android:layout_marginBottom="24dp"
                app:cornerRadius="@dimen/renew_button_radius" />

        </LinearLayout>

    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>